--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,16 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+.idea/
+controller/controller.iml
+controller/target/generated-sources/
+domain/domain.iml
+domain/target/generated-sources/
+domain/target/generated-test-sources/
+fluxdemo.iml
+service/service.iml
+service/target/generated-sources/
+service/target/generated-test-sources/
+controller/target/classes/
+domain/target/classes/
+domain/target/test-classes/
+service/target/classes/
+service/target/test-classes/
+target/
