[fuchun] #Tech adjust ignore info

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,9 @@
 .idea/
 controller/controller.iml
-controller/target/generated-sources/
 domain/domain.iml
-domain/target/generated-sources/
-domain/target/generated-test-sources/
 fluxdemo.iml
 service/service.iml
-service/target/generated-sources/
-service/target/generated-test-sources/
-controller/target/classes/
-domain/target/classes/
-domain/target/test-classes/
-service/target/classes/
-service/target/test-classes/
+service/target/
+controller/target/
+domain/target/
 target/
