[fuchun] #Tech first run

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,11 @@
         <lombok-version>1.18.2</lombok-version>
     </properties>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.0.3.RELEASE</version>
+    </parent>
 
     <dependencies>
         <dependency>
@@ -31,7 +36,7 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-    
+
     <modules>
         <module>domain</module>
         <module>service</module>
