--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -25,5 +25,10 @@
             <artifactId>service</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
     </dependencies>
+
 </project>
