[fuchun] #Tech confirm get request run successfully in router style

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -13,4 +13,17 @@
     <version>1.0</version>
     <name>service</name>
     <url>http://maven.apache.org</url>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.tank</groupId>
+            <artifactId>domain</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j-api-version}</version>
+        </dependency>
+    </dependencies>
 </project>
