--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,14 @@
         <maven-compiler-plugin-version>3.7.0</maven-compiler-plugin-version>
         <junit-version>4.12</junit-version>
         <lombok-version>1.18.2</lombok-version>
+        <slf4j-api-version>1.7.25</slf4j-api-version>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.0.3.RELEASE</version>
+
     </parent>
 
     <dependencies>
@@ -33,7 +35,6 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombok-version}</version>
-            <scope>provided</scope>
         </dependency>
     </dependencies>
 
@@ -54,8 +55,13 @@
                         <target>${jdk-version}</target>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-maven-plugin</artifactId>
+                </plugin>
             </plugins>
         </pluginManagement>
+        <finalName>fluxdemo</finalName>
     </build>
 
 </project>
