[fuchun] #Tech resolve packaing issue

--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -3,16 +3,19 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>com.tank</groupId>
-        <artifactId>fluxdemo</artifactId>
-        <version>1.0</version>
-    </parent>
     <groupId>com.tank</groupId>
     <artifactId>controller</artifactId>
     <version>1.0</version>
     <name>controller</name>
     <url>http://maven.apache.org</url>
+
+
+    <parent>
+        <groupId>com.tank</groupId>
+        <artifactId>fluxdemo</artifactId>
+        <version>1.0</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
 
     <dependencies>
         <dependency>
@@ -25,12 +28,16 @@
             <artifactId>service</artifactId>
             <version>1.0</version>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
-        </dependency>
+
     </dependencies>
 
-
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+        <finalName>fluxdemo</finalName>
+    </build>
 </project>
