--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -12,5 +12,6 @@
     <artifactId>domain</artifactId>
     <version>1.0</version>
     <name>domain</name>
+    <packaging>jar</packaging>
     <url>http://maven.apache.org</url>
 </project>
