--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,6 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.0.3.RELEASE</version>
-
     </parent>
 
     <dependencies>
@@ -36,6 +35,10 @@
             <artifactId>lombok</artifactId>
             <version>${lombok-version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
     </dependencies>
 
     <modules>
@@ -43,25 +46,5 @@
         <module>service</module>
         <module>controller</module>
     </modules>
-
-    <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>${maven-compiler-plugin-version}</version>
-                    <configuration>
-                        <source>${jdk-version}</source>
-                        <target>${jdk-version}</target>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-maven-plugin</artifactId>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-        <finalName>fluxdemo</finalName>
-    </build>
 
 </project>
