--- a/service/pom.xml
+++ b/service/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j-api-version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.davidmoten</groupId>
+            <artifactId>rxjava2-jdbc</artifactId>
+            <version>0.1-RC39</version>
+        </dependency>
     </dependencies>
 
 </project>
